# java-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  action.yml
.github/workflows/: ci.yml  docs.yml
docs/: book.toml
docs/plans/: 2026-02-05-null-pointer-detection-design.md  2026-02-05-null-pointer-detection-impl.md
docs/src/: README.md  SUMMARY.md
docs/src/commands/: analyze.md  baseline.md  coverage.md  debt.md  diff.md  duplication.md  hotspots.md  init.md  rules.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/reference/: cicd.md  output-formats.md  quality-gates.md  rules.md
docs/src/theme/: custom.css
src/: autofix.rs  baseline.rs  cache.rs  coverage.rs  debt.rs  duplication.rs  hotspots.rs  lib.rs  main.rs  module.rs  quality_gate.rs  suppression.rs  watch.rs
src/dataflow/: cfg.rs  cfg_builder.rs  lattice.rs  mod.rs  nullability.rs
src/parser/: mod.rs
src/reports/: mod.rs
src/rules/: bugs.rs  code_smells.rs  complexity.rs  custom.rs  mod.rs  naming.rs  security.rs
tests/fixtures/custom-rules/: invalid-regex.yaml  valid-rules.yaml
tests/fixtures/gradle-multi/: settings.gradle
tests/fixtures/gradle-multi/app/: build.gradle
tests/fixtures/gradle-multi/app/src/main/java/: Main.java
tests/fixtures/gradle-multi/lib/src/main/java/: Utils.java
tests/fixtures/maven-multi/: pom.xml
tests/fixtures/maven-multi/module-a/: pom.xml
tests/fixtures/maven-multi/module-a/src/main/java/: ModuleA.java
tests/fixtures/maven-multi/module-b/: pom.xml
(+1 files in other folders)
